fix: change exisitng memory index types into MemoryType class
Signed-off-by: Sicheng Song <sicheng.song@outlook.com>